--- a/.config/sway/config
+++ b/.config/sway/config
@@ -27,13 +27,18 @@ output DP-2 pos 0 1080
 output DVI-I-1 pos 2560 0
 output HDMI-A-1 pos 2560 1080
 
+output eDP-1 res 1920 1080 pos 0 0
+output DP-2 res 2560 1080 pos 1920 0
+
+output eDP-1 bg ~/Bilder/wallpapers/1 fill
+
 output DP-1 bg ~/Bilder/wallpapers/1 fill
 output DP-2 bg ~/Bilder/wallpapers/2 fill
 output HDMI-A-1 bg ~/Bilder/wallpapers/3 fill
 output DVI-I-1 bg ~/Bilder/wallpapers/4 fill
 
 ### Misc config
-gaps inner 5
+gaps inner 15
 
 ### Key bindings
 #
@@ -72,11 +77,16 @@ gaps inner 5
     bindsym $mod+j focus down
     bindsym $mod+k focus up
     bindsym $mod+l focus right
+
+    # cursor keys changes workspace (on same output, like in awesome):
+    bindsym $mod+Left  workspace prev_on_output
+    bindsym $mod+Right workspace next_on_output
+
     # or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
+    # bindsym $mod+Left focus left
+    # bindsym $mod+Down focus down
+    # bindsym $mod+Up focus up
+    # bindsym $mod+Right focus right
 
     # _move_ the focused window with the same, but add Shift
     bindsym $mod+Shift+h move left
@@ -184,27 +194,34 @@ gaps inner 5
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-		swaybar_command /usr/bin/swaybar
-        status_command i3status
-		position top
-		output DP-1
+    swaybar_command /usr/bin/swaybar
+    status_command i3status
+    position bottom
+    # laptop screen
+    output eDP-1
 }
 bar {
-		swaybar_command /usr/bin/swaybar
-        status_command i3status
-		position bottom
-		output DP-2
+    swaybar_command /usr/bin/swaybar
+    status_command i3status
+    position top
+    output DP-1
 }
 bar {
-		swaybar_command /usr/bin/swaybar
-        status_command i3status
-		position top
-		output DVI-I-1
-		#font pango:DejaVu Sans Mono 10
+    swaybar_command /usr/bin/swaybar
+    status_command i3status
+    position bottom
+    output DP-2
 }
 bar {
-		swaybar_command /usr/bin/swaybar
-        status_command i3status
-		position bottom
-		output HDMI-A-1
+    swaybar_command /usr/bin/swaybar
+    status_command i3status
+    position top
+    output DVI-I-1
+    #font pango:DejaVu Sans Mono 10
+}
+bar {
+    swaybar_command /usr/bin/swaybar
+    status_command i3status
+    position bottom
+    output HDMI-A-1
 }
