--- a/bin/display-layouts.yml
+++ b/bin/display-layouts.yml
@@ -1,22 +1,6 @@
 ---
-- profiles:
-  - &kira_single
-    name: single
-    outputs:
-    - name: eDP-1
-      res: 3840x2160
-      pos: "0x0"
-
 - layouts:
-  - name: Kira Standalone
-    outputs:
-    - name: eDP-1
-      res: 3840x2160
-      main: true
-    profiles:
-    - *kira_single
-
-  - name: Kira Home
+  - name: Dellicious Home
     outputs:
     - name: eDP-1
       res: 3840x2160
@@ -25,7 +9,6 @@
     - name: DP-2
       res: 2560x1080
     profiles:
-    - *kira_single
     - name: home
       outputs:
       - name: DP-2
@@ -38,3 +21,78 @@
         res: 3840x2160
         scale: 1920x1080
         pos: "0x2160"
+    - &dellicious_single
+      name: single
+      outputs:
+      - name: eDP-1
+        res: 3840x2160
+        pos: "0x0"
+
+  - name: Dellicious Single
+    outputs:
+    - name: eDP-1
+      res: 3840x2160
+      main: true
+    profiles:
+    - *dellicious_single
+
+  - name: Kira Quad
+    outputs:
+    - name: HDMI-1
+      res: 1920x1080
+    - name: HDMI-2
+      res: 1920x1080
+    - name: DP-1
+      res: 2560x1080
+    - name: DP-2
+      res: 2560x1080
+    profiles:
+    - name: quad
+      outputs:
+      - name: DP-1
+        res: 2560x1080
+        pos: "0x0"
+      - name: DP-2
+        res: 2560x1080
+        pos: "0x1080"
+      - name: HDMI-1
+        res: 1920x1080
+        rotate: left
+        pos: 2560x0
+      - name: HDMI-2
+        res: 1920x1080
+        pos: 3640x0
+    - &kira_dual
+      name: dual
+      outputs:
+      - name: HDMI-1
+        res: 1920x1080
+        rotate: left
+        pos: "0x0"
+      - name: HDMI-2
+        res: 1920x1080
+        pos: 1080x0
+    - &kira_single
+      name: single
+      outputs:
+      - name: HDMI-2
+        res: 1920x1080
+        pos: "0x0"
+
+  - name: Kira Dual
+    outputs:
+    - name: HDMI-1
+      res: 1920x1080
+    - name: HDMI-2
+      res: 1920x1080
+    profiles:
+    - *kira_dual
+    - *kira_single
+
+  - name: Kira Single
+    # Not sure if this is needed but whatever:
+    outputs:
+    - name: HDMI-2
+      res: 1920x1080
+    profiles:
+    - *kira_single
