bin/home4: Add profiles to Layout.

--- a/bin/display-layouts.yml
+++ b/bin/display-layouts.yml
@@ -76,7 +76,7 @@
     - name: DP-2
       res: 2560x1080
     profiles:
-    - name: home
+    - name: triple
       outputs:
       - name: DP-2
         res: 2560x1080
