--- a/.config/i3/config
+++ b/.config/i3/config
@@ -220,7 +220,8 @@ bindsym $mod+Shift+c reload
 # monitors
 bindsym $mod+Shift+p exec --no-startup-id ~/bin/presenter-mode.sh
 
-bindsym $mod+Shift+w exec --no-startup-id ~/bin/4k.sh
+#bindsym $mod+Shift+w exec --no-startup-id ~/bin/4k.sh
+bindsym $mod+Shift+w exec --no-startup-id ~/bin/display-profiles.rb
 bindsym $mod+Shift+a exec --no-startup-id ~/bin/4k-single.sh
 
 bindsym $mod+ctrl+a exec --no-startup-id ~/bin/4k-single.sh fullhd
