--- a/.gitconfig
+++ b/.gitconfig
@@ -62,8 +62,10 @@
   #lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
 
   lol = log --graph --pretty=format:'%C(red bold)%h%Creset -%C(yellow bold)%d%Creset %s %C(green bold)(%ad) %C(bold cyan)<%an>%Creset' --abbrev-commit --decorate --date=iso
+  loll = log --graph --pretty=format:'%C(red bold)%h%Creset -%C(yellow bold)%d%Creset %s %C(green bold)(%ad) %C(bold cyan)<%an>%Creset%n%w(0,4,4)%-b%n%n%-N' --abbrev-commit --decorate --date=iso
 
   lola = log --graph --pretty=format:'%C(red bold)%h%Creset -%C(yellow bold)%d%Creset %s %C(green bold)(%ad) %C(bold cyan)<%an>%Creset' --abbrev-commit --decorate --date=iso --all
+  lolla = log --graph --pretty=format:'%C(red bold)%h%Creset -%C(yellow bold)%d%Creset %s %C(green bold)(%ad) %C(bold cyan)<%an>%Creset%n%w(0,4,4)%-b%n%n%-N' --abbrev-commit --decorate --date=iso --all
 
   hist = log --pretty=format:\"%h %ad %s%d [%an]\" --graph --date=short
   timeline = log --oneline --graph --decorate
